@@ -14,11 +14,13 @@ The rules for this file:
 
 ------------------------------------------------------------------------------
 ??/??/16 kain88-de, fiona-naughton, richardjgowers, tyler.je.reddy, jdetle
-         euhruska, orbeckst, rbrtdlg, jbarnoud, wouterboomsma, shanmbic, dotsdl
+         euhruska, orbeckst, rbrtdlg, jbarnoud, wouterboomsma, shanmbic,
+         dotsdl, manuel.nuno.melo
 
   * 0.16.0
 
 Enhancements
+  * Added dynamic selections (addreses Issues #175 and #1074).
   * Added 'MemoryReader' class to allow manipulation of trajectory data
     in-memory, which can provide substantial speed-ups to certain
     calculations.
